--- a/src/components/ui/Forms/Form.module.scss
+++ b/src/components/ui/Forms/Form.module.scss
@@ -9,9 +9,10 @@
   border-radius: 10px;
   border: 1px solid #eeeeee;
   box-shadow: #eeeeee 0 0 5px 4px;
+  position: relative;
 
   button:last-of-type {
-    margin-top: 30px;
+    margin-top: 40px;
   }
 }
 
