--- a/src/components/pages/EditorPage/EditorPage.module.scss
+++ b/src/components/pages/EditorPage/EditorPage.module.scss
@@ -15,6 +15,7 @@
     & textarea {
       resize: none;
       border-radius: 5px;
+
       &:focus {
         outline: none;
       }
@@ -30,5 +31,20 @@
     width: 100%;
     background-color: $color-dusty-gray;
     border-radius: 5px;
+  }
+}
+
+.control {
+  &_btn {
+    border-radius: 5px;
+    width: 50px;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    justify-self: center;
+  }
+
+  & button {
+    padding: 5px;
   }
 }
