--- a/src/App.scss
+++ b/src/App.scss
@@ -4,3 +4,12 @@
   padding: 2rem;
   text-align: center;
 }
+
+.decorationsOverviewRuler {
+  display: none !important;
+}
+
+.monaco-editor,
+.monaco-editor .overflow-guard {
+  border-radius: 5px;
+}
