--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,31 @@
 :root {
+  height: 100%;
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
   font-size: 16px;
-
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
+}
+#root {
+  height: 100%;
+}
+body {
+  height: 100%;
+}
+ul li {
+  list-style-type: none;
+}
+nav {
+  list-style: none;
+}
+a {
+  text-decoration: none;
+}
+* {
+  margin: 0;
+  padding: 0;
 }
