refactor: move EditorPage to 'pages' folder in src

--- a/src/index.scss
+++ b/src/index.scss
@@ -29,3 +29,12 @@ a {
   margin: 0;
   padding: 0;
 }
+
+.decorationsOverviewRuler {
+  display: none !important;
+}
+
+.monaco-editor,
+.monaco-editor .overflow-guard {
+  border-radius: 5px;
+}
