--- a/src/pages/NotFoundPage/NotFoundPage.module.scss
+++ b/src/pages/NotFoundPage/NotFoundPage.module.scss
@@ -1,7 +1,7 @@
 .wrapper {
   width: 100%;
   height: 100%;
-  background-image: url(404.png);
+  background-image: url(/404.png);
   background-repeat: no-repeat;
   background-position: center;
   background-size: contain;
