fix: fix form styles

--- a/src/components/forms/ValidationErrorMessage/ValidationErrorMessage.module.scss
+++ b/src/components/forms/ValidationErrorMessage/ValidationErrorMessage.module.scss
@@ -7,6 +7,7 @@ $font-size-normal: 1.3rem;
   position: absolute;
   margin: 0;
   bottom: -$font-size-normal;
+  left: 5px;
   color: #DC143CFF;
   cursor: default;
 }
