feat: add some styles to link

--- a/src/pages/LoginPage/LoginPage.module.scss
+++ b/src/pages/LoginPage/LoginPage.module.scss
@@ -5,3 +5,13 @@
   align-items: center;
   margin-top: 40px;
 }
+
+.link {
+  transition: color .15s linear;
+  color: #000000;
+  text-decoration: underline;
+
+  &:hover {
+    color: #8ee100;
+  }
+}
