--- a/src/components/forms/ResponseErrorMessage/ResponseErrorMessage.module.scss
+++ b/src/components/forms/ResponseErrorMessage/ResponseErrorMessage.module.scss
@@ -4,7 +4,7 @@ $font-size-normal: 1.3rem;
   font-size: $font-size-normal;
   line-height: $font-size-normal;
   bottom: -$font-size-normal;
-  background: #fa9aa9;
+  background: #ff5670;
   padding: 5px;
   color: white;
   font-weight: 400;
