feat: add Variables component, refactor EditorPage

--- a/src/index.scss
+++ b/src/index.scss
@@ -44,4 +44,9 @@ a {
 .monaco-editor,
 .monaco-editor .overflow-guard {
   border-radius: 5px;
+  padding-top: 4px;
+}
+
+.monaco-editor .margin {
+  padding-top: 4px;
 }
