feat: add simple schema block

--- a/src/pages/EditorPage/EditorPage.module.scss
+++ b/src/pages/EditorPage/EditorPage.module.scss
@@ -29,9 +29,11 @@
   }
 
   &_answer {
+    position: relative;;
     width: 100%;
     background-color: #fff;
     border-radius: 5px;
+    display: flex;
   }
 }
 
