--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -4,7 +4,7 @@
   z-index: 100;
   flex: 0 0 auto;
   width: 100%;
-  height: 4rem;
+  min-height: 90px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -18,7 +18,7 @@
   width: 1200px;
   margin: 0 auto;
   gap: .3rem;
-  padding: 0 .5rem;
+  padding: .5rem;
   align-items: center;
   justify-content: space-between;
 }
@@ -27,7 +27,7 @@
   position: fixed;
   flex: 0 0 auto;
   width: 100%;
-  height: 4rem;
+  min-height: 90px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -35,4 +35,11 @@
   z-index: 100;
   box-shadow: 0 0 10px 5px rgba(221, 221, 221, 1);
   background-color: rgb(248, 248, 248);
+}
+
+.box1 {
+  display: flex;
+  flex-direction: column;
+  align-items: end;
+  row-gap: 10px;
 }
