--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -3,9 +3,9 @@
 .footer {
   flex: 0 0 auto;
   width: 100%;
-  height: 4rem;
+  min-height: 4rem;
   background-color: rgb(233, 230, 230);
-  border: solid .1px rgb(108, 108, 108);
+  border-top: solid .1px rgb(108, 108, 108);
 }
 
 .wrapper {
