--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -8,4 +8,7 @@ $width-wrap-app-content: 1440px;
 
 $animation-time-welcome: .6s;
 
-$hover-btn: #bcdc85;
+$hover-btn: rgba(188, 220, 133, .5);
+
+$bg-btn-header: rgba(225, 0, 152, 0.2);
+;
