--- a/src/components/NavigateButton/NavigateButton.module.scss
+++ b/src/components/NavigateButton/NavigateButton.module.scss
@@ -8,11 +8,11 @@
   border: none;
   border-radius: 10px;
   cursor: pointer;
-  transition: transform .05s linear;
+  transition: transform .05s linear, background-color .1s linear;
   font-weight: 200;
   font-size: 1.2rem;
   padding: 5px 20px;
-  transition: .5s;
+
   &:hover {
     background-color: $hover-btn;
   }
