--- a/src/pages/WelcomePage/WelcomePage.module.scss
+++ b/src/pages/WelcomePage/WelcomePage.module.scss
@@ -4,12 +4,12 @@
   height: 100%;
   max-width: 100%;
   display: flex;
-  background-image: url("bg.jpeg");
-  background-position: center; 
-  background-repeat: no-repeat; 
+  background-image: url("/bg.jpeg");
+  background-position: center;
+  background-repeat: no-repeat;
   background-size: cover;
   background-color: #d4d4d4;
-  
+
   &_wrap {
     max-width: $width-wrap-app-content;
     margin: 0 auto;
