--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,9 +1,11 @@
+@import "../../styles/variables";
+
 .header {
   position: sticky;
   top: 0;
   flex: 0 0 auto;
   width: 100%;
-  min-height: 4rem;
+  min-height: 90px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -17,7 +19,7 @@
   width: $width-wrap-app-content;
   margin: 0 auto;
   gap: .3rem;
-  padding: 0 .5rem;
+  padding: .5rem;
   align-items: center;
   justify-content: space-between;
 }
