--- a/src/components/Variables/Variables.module.scss
+++ b/src/components/Variables/Variables.module.scss
@@ -6,6 +6,7 @@
   border-top: 2px solid $color-light-gray;
   width: 100%;
   bottom: 0;
+  background-color: #fff;
 
   &>div:nth-child(2) {
     margin-left: 5px;
