--- a/src/components/forms/ResponseErrorMessage/ResponseErrorMessage.module.scss
+++ b/src/components/forms/ResponseErrorMessage/ResponseErrorMessage.module.scss
@@ -1,10 +1,12 @@
 $font-size-normal: 1.3rem;
 
-.validation_error {
+.response_error {
   font-size: $font-size-normal;
   line-height: $font-size-normal;
-  bottom: -$font-size-normal;
   background: #ff5670;
+  max-width: 320px;
+  display: flex;
+  text-align: center;
   padding: 5px;
   color: white;
   font-weight: 400;
