--- a/src/components/Tabs/Tabs.module.scss
+++ b/src/components/Tabs/Tabs.module.scss
@@ -16,20 +16,23 @@
   cursor: pointer;
 
   &_label {
-    padding: 10px 40px;
+    padding: 3px 25px;
+    text-transform: uppercase;
+    font-size: 14px;
   }
 
   &_plus {
-    padding: 10px 10px;
+    padding: 3px 10px;
+    font-size: 14px;
   }
 
   & span {
     position: absolute;
-    width: 20px;
-    height: 20px;
+    width: 15px;
+    height: 15px;
     border-radius: 50%;
     right: 5px;
-    top: calc((100% - 20px) / 2);
+    top: calc((100% - 14px) / 2);
     transition: 0.4s;
 
     &::before,
@@ -38,8 +41,8 @@
       content: "";
       transform: rotate(45deg);
       top: calc(50% - 1px);
-      left: 1px;
-      width: 18px;
+      left: 2px;
+      width: 12px;
       height: 2px;
       background-color: transparent;
     }
@@ -50,7 +53,6 @@
 
     &:hover {
       transform: scale(1.1);
-      border-radius: 50%;
       background-color: $color-light-gray;
     }
   }
