--- a/src/components/Tabs/Tabs.module.scss
+++ b/src/components/Tabs/Tabs.module.scss
@@ -4,6 +4,18 @@
   display: flex;
   column-gap: 5px;
   overflow: auto;
+  padding-bottom: 1px;
+  margin-bottom: 1px;
+
+  &::-webkit-scrollbar {
+    background-color: $color-light-gray;
+    border-radius: 5px;
+    height: 5px;
+  }
+  &::-webkit-scrollbar-thumb {
+    background-color: $color-graphite-gray;
+    border-radius: 5px;
+  }
 }
 
 .tab {
@@ -11,6 +23,7 @@
   border: 1px solid transparent;
   border-top-left-radius: 5px;
   border-top-right-radius: 10px;
+  white-space: nowrap;
   transition: all 0.4s;
   background-color: $color-light-gray;
   cursor: pointer;
