--- a/src/pages/EditorPage/EditorPage.module.scss
+++ b/src/pages/EditorPage/EditorPage.module.scss
@@ -13,7 +13,6 @@
     column-gap: 5px;
     justify-content: space-between;
     border-bottom-right-radius: 5px;
-    border-top-right-radius: 5px;
     border-bottom-left-radius: 5px;
 
     &>div:nth-child(1) {
@@ -41,6 +40,10 @@
     display: flex;
     align-items: center;
     justify-self: center;
+
+    &>svg {
+      fill: $color-graphite-gray;
+    }
   }
 
   & button {
