--- a/src/components/Sch/Sch.module.scss
+++ b/src/components/Sch/Sch.module.scss
@@ -6,15 +6,28 @@
   background-color: #eeeeee;
   border-radius: 10px;
   padding: 10px;
+  user-select: none;
+  max-height: 600px;
+  overflow-y: auto;
 }
 
 .arg {
   margin-left: 10px;
 }
+
 .desc {
   margin-top: 5px;
 }
+
 .name {
   font-size: 1.5rem;
   font-weight: 500;
+}
+
+.backMenu {
+  cursor: pointer;
+
+  &:hover {
+    text-decoration: underline;
+  }
 }
