--- a/src/components/Sch/Sch.module.scss
+++ b/src/components/Sch/Sch.module.scss
@@ -2,14 +2,27 @@
   display: flex;
   flex-direction: column;
   row-gap: 15px;
-  max-width: 300px;
   background-color: #eeeeee;
-  border-radius: 10px;
   padding: 10px;
   user-select: none;
-  max-height: 600px;
+  width: 250px;
+  height: 700px;
   overflow-y: auto;
+
+  &::-webkit-scrollbar {
+    width: 5px;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background-color: #c1c1c1;
+    border-radius: 5px;
+  }
+
+  &::-webkit-scrollbar-track {
+    background-color: #f1f1f1;
+  }
 }
+
 
 .arg {
   margin-left: 10px;
