--- a/src/components/Response/Response.module.scss
+++ b/src/components/Response/Response.module.scss
@@ -6,6 +6,7 @@
   display: flex;
   justify-content: center;
   font-size: 14px;
+  overflow-x: hidden;
 
   .response_container {
     max-width: 200px;
