--- a/src/components/Schema1/SchemaContent/SchemaContent.module.scss
+++ b/src/components/Schema1/SchemaContent/SchemaContent.module.scss
@@ -1,3 +1,25 @@
+.main_container {
+  display: flex;
+  flex-direction: column;
+  overflow-y: auto;
+  padding: 10px 10px 10px 10px;
+  row-gap: 15px;
+  width: 100%;
+
+  &::-webkit-scrollbar {
+    width: 5px;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background-color: #c1c1c1;
+    border-radius: 5px;
+  }
+
+  &::-webkit-scrollbar-track {
+    background-color: #f1f1f1;
+  }
+}
+
 .arg {
   margin-left: 10px;
 }
@@ -11,9 +33,8 @@
   font-weight: 500;
 }
 
-
 .fieldName {
-  color: #5F89D8;
+  color: #5f89d8;
 
   &:hover {
     text-decoration: underline;
@@ -21,15 +42,15 @@
 }
 
 .argName {
-  color: #FF6B8B;
+  color: #ff6b8b;
 }
 
 .fieldNameRoot {
-  color: #5F89D8;
+  color: #5f89d8;
 }
 
 .typeName {
-  color: #EB9C00;
+  color: #eb9c00;
 
   &:hover {
     text-decoration: underline;
@@ -42,8 +63,19 @@
 
 .backMenu {
   cursor: pointer;
+  width: fit-content;
 
   &:hover {
     text-decoration: underline;
   }
+}
+
+.err {
+  background-color: #efa8b5;
+  border-radius: 5px;
+  font-size: 16px;
+  font-weight: 500;
+  padding: 5px;
+  text-align: center;
+  width: 100%;
 }
