--- a/src/components/Schema1/SchemaContent/SchemaContent.module.scss
+++ b/src/components/Schema1/SchemaContent/SchemaContent.module.scss
@@ -72,7 +72,7 @@
 }
 
 .err {
-  background-color: #efa8b5;
+  background-color: #ff5670;
   border-radius: 5px;
   font-size: 16px;
   font-weight: 500;
