--- a/src/components/Schema/Schema.module.scss
+++ b/src/components/Schema/Schema.module.scss
@@ -28,9 +28,11 @@
   }
 
   &_btn {
+    align-items: center;
     background-color: $color-iron-gray;
     border-top-left-radius: 5px;
     border-top-right-radius: 5px;
+    display: flex;
     height: 30px;
     left: 0;
     padding: 5px 18px 5px;
