--- a/src/components/Schema/SchemaExplorer/SchemaExplorer.module.scss
+++ b/src/components/Schema/SchemaExplorer/SchemaExplorer.module.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   overflow-y: auto;
-  padding: 10px 10px 10px 10px;
+  padding: 10px;
   row-gap: 15px;
   width: 100%;
 
@@ -64,8 +64,9 @@
 
 .backMenu {
   cursor: pointer;
-  width: fit-content;
   user-select: none;
+  width: fit-content;
+
   &:hover {
     text-decoration: underline;
   }
