--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -19,6 +19,10 @@
   margin: 0 auto;
   padding: 0 .5rem;
   color: black;
+  @media (max-width: 600px) {
+    justify-content: center;
+    gap: 0rem;
+  }
 }
 
 .rsschool_link {
@@ -33,10 +37,10 @@
 .GHLink {
   color: black;
   cursor: pointer;
-  transition: .5s;
+  transition: color $transitionHover;
 
   &:hover {
-    color: #8ee100;
+    color: $primerySecondarycolor;
   }
 }
 
@@ -47,6 +51,9 @@
   font-weight: 500;
   gap: 1rem;
   justify-content: center;
+  @media (max-width: 600px) {
+    gap: .5rem;
+  }
 }
 
 .school_link {
