--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,7 +1,6 @@
 @import 'styles/variables.scss';
 
 .header {
-  position: sticky;
   top: 0;
   flex: 0 0 auto;
   width: 100%;
@@ -28,7 +27,7 @@
   position: sticky;
   flex: 0 0 auto;
   width: 100%;
-  height: 4rem;
+  min-height: 4rem;
   display: flex;
   align-items: center;
   justify-content: center;
