--- a/src/components/NavigateButton/NavigateButton.module.scss
+++ b/src/components/NavigateButton/NavigateButton.module.scss
@@ -1,17 +1,17 @@
 @import 'styles/variables.scss';
 
 .button {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background: $bg-btn-header;
-  border: none;
-  border-radius: 10px;
-  cursor: pointer;
-  transition: transform .05s linear, background-color .1s linear;
-  font-weight: 200;
-  font-size: 1.2rem;
-  padding: 5px 20px;
+  font-weight: 700;
+    font-size: 1.4rem;
+    text-align: center;
+    border-radius: 5rem;
+    cursor: pointer;
+    white-space: nowrap;
+    padding: 0.4rem 1.5rem 0.5rem;
+    color: #1d201c;
+    background-color: #d26db2;
+    border: 0.2rem solid #eaeaea;
+    transition: background-color $transitionHover;
 
   &:hover {
     background-color: $hover-btn;
