--- a/src/components/forms/Form.module.scss
+++ b/src/components/forms/Form.module.scss
@@ -1,3 +1,5 @@
+@import 'styles/variables.scss';
+
 .form {
   display: flex;
   flex-direction: column;
@@ -12,6 +14,10 @@
 
   button:last-of-type {
     margin-top: 40px;
+  }
+  
+  @media (max-width: 600px) {
+    padding: 10px;
   }
 }
 
@@ -30,14 +36,15 @@
   font-size: 1.5rem;
   font-weight: 200;
   height: 35px;
-  min-width: 320px;
+  min-width: 280px;
   background: #eeeeee;
   border: none;
   padding: 0 5px;
   border-radius: 3px;
+  cursor: pointer;
 
   &::placeholder {
-    color: #000000;
+    color: #777575;
   }
 
   &:focus-visible {
