--- a/src/components/forms/ValidationErrorMessage/ValidationErrorMessage.module.scss
+++ b/src/components/forms/ValidationErrorMessage/ValidationErrorMessage.module.scss
@@ -1,10 +1,10 @@
-$font-size-normal: 1.3rem;
+$font-size-normal: 1rem;
 
 .validation_error{
+  height: 1.2rem;
   font-weight: 200;
   font-size: $font-size-normal;
-  line-height: $font-size-normal;
-  position: absolute;
+  line-height: calc($font-size-normal + .4rem);
   margin: 0;
   bottom: -$font-size-normal;
   left: 5px;
