--- a/src/pages/SignupPage/SignupPage.module.scss
+++ b/src/pages/SignupPage/SignupPage.module.scss
@@ -1,3 +1,5 @@
+@import 'styles/variables.scss';
+
 .signup_page_wrapper {
   display: flex;
   flex-direction: column;
@@ -7,9 +9,10 @@
 }
 
 .link {
-  transition: color .15s linear;
-  color: #000000;
+  transition: color $transitionHover linear;
+  color: #3f51f3;
   text-decoration: underline;
+  cursor: pointer;
 
   &:hover {
     color: #8ee100;
