--- a/src/components/NavigateButton/NavigateButton.module.scss
+++ b/src/components/NavigateButton/NavigateButton.module.scss
@@ -1,17 +1,17 @@
 @import 'styles/variables.scss';
 
 .button {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background: $bg-btn-header;
-  border: none;
-  border-radius: 10px;
-  cursor: pointer;
-  transition: transform .05s linear, background-color .1s linear;
-  font-weight: 200;
+  font-weight: 700;
   font-size: 1.2rem;
-  padding: 5px 20px;
+  text-align: center;
+  border-radius: 5rem;
+  cursor: pointer;
+  white-space: nowrap;
+  padding: 0.2rem 1rem 0.3rem;
+  color: #1d201c;
+  background-color: #d5d4d4;
+  border: 0.15rem solid #f432d0;
+  transition: background-color $transitionHover;
 
   &:hover {
     background-color: $hover-btn;
