--- a/src/components/forms/FormSubmitButton/FormSubmitButton.module.scss
+++ b/src/components/forms/FormSubmitButton/FormSubmitButton.module.scss
@@ -1,5 +1,7 @@
+@import 'styles/variables.scss';
+
 .button {
-  background: #eeeeee;
+  background: $primerySecondarycolor;
   height: 35px;
   width: 200px;
   padding: 5px;
@@ -7,7 +9,11 @@
   border-radius: 10px;
   font-weight: 500;
   cursor: pointer;
-  transition: transform .05s linear;
+  transition: background-color $transitionHover linear;
+
+  &:hover {
+    background-color: $hover-btn;
+  }
 
   &:focus-visible {
     outline: none;
