--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -3,6 +3,8 @@ $color-light-gray: #DCDCDC;
 $color-dusty-gray: #7D7F7D;
 $color-graphite-gray: #474A51;
 $color-iron-gray: #434B4D;
+$color-bg-card: rgb(83, 82, 82);
+$color-bg-main: rgb(25, 25, 25);
 
 $width-wrap-app-content: 1440px;
 
@@ -11,4 +13,8 @@ $animation-time-welcome: .6s;
 $hover-btn: rgba(188, 220, 133, .5);
 
 $bg-btn-header: rgba(225, 0, 152, 0.2);
-;
+
+$primerySecondarycolor: #8ee100;
+
+$transitionHover: .6s;
+
