--- a/src/components/Developer/Developer.module.scss
+++ b/src/components/Developer/Developer.module.scss
@@ -11,7 +11,7 @@
   box-shadow: 4px 5px 9px 0 rgba(33, 55, 71, 0.2);
   opacity: 0;
   animation: fadeIn $animation-time-welcome ease-in both;
-  transition: .9s;
+  transition: scale $transitionHover;
   will-change: transform;
   cursor: pointer;
 
