fix: #24 fix padding

--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -10,6 +10,7 @@
   justify-content: center;
   background-color: #eeeeee;
   border-bottom: 0.3px black solid;
+  padding: .2rem;
 }
 
 .wrapper {
@@ -35,4 +36,5 @@
   z-index: 100;
   box-shadow: 0 0 8px 6px rgb(157, 157, 157);
   background-color: rgb(255, 255, 255);
+  padding: .2rem;
 }
