--- a/src/components/forms/ResponseErrorMessage/ResponseErrorMessage.module.scss
+++ b/src/components/forms/ResponseErrorMessage/ResponseErrorMessage.module.scss
@@ -1,6 +1,6 @@
 $font-size-normal: 1.3rem;
 
-.validation_error {
+.response_error {
   height: 1.5rem;
   font-size: $font-size-normal;
   line-height: $font-size-normal;
