feat: add media 700px

--- a/src/components/Tabs/Tabs.module.scss
+++ b/src/components/Tabs/Tabs.module.scss
@@ -90,3 +90,16 @@
     }
   }
 }
+
+@media (max-width: 700px) {
+  .tab {
+
+      &_label {
+          padding: 3px 18px;
+      }
+
+      & span {
+        right: 2px;
+      }
+  }
+}
