--- a/src/components/Response/Response.module.scss
+++ b/src/components/Response/Response.module.scss
@@ -7,6 +7,7 @@
   justify-content: center;
   font-size: 14px;
   overflow-x: hidden;
+  min-height: 500px;
 
   .response_container {
     max-width: 200px;
