refactor: add radius for scroll, remove shadow

--- a/src/index.scss
+++ b/src/index.scss
@@ -38,6 +38,11 @@ a {
 }
 
 .monaco-editor,
+.monaco-editor .slider,
 .monaco-editor .overflow-guard {
   border-radius: 5px;
+}
+
+.monaco-editor .scroll-decoration {
+  box-shadow: none !important;
 }
