--- a/src/pages/NotFoundPage/NotFoundPage.module.scss
+++ b/src/pages/NotFoundPage/NotFoundPage.module.scss
@@ -1,8 +1,8 @@
 .wrapper {
-  width: 100%;
-  height: 100%;
-  background-image: url(/404.png);
-  background-repeat: no-repeat;
+  background-image: url('assets/images/404.webp');
   background-position: center;
+  background-repeat: no-repeat;
   background-size: contain;
+  height: 100%;
+  width: 100%;
 }
