fix: fix sticky, design

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -3,7 +3,7 @@ $color-light-gray: #DCDCDC;
 $color-dusty-gray: #7D7F7D;
 $color-graphite-gray: #474A51;
 $color-iron-gray: #434B4D;
-$color-bg-card: rgb(83, 82, 82);
+$color-bg-card: rgba(82, 122, 132, 0.7);
 $color-bg-main: rgb(25, 25, 25);
 
 $width-wrap-app-content: 1440px;
