--- a/src/components/Developer/Developer.module.scss
+++ b/src/components/Developer/Developer.module.scss
@@ -1,13 +1,10 @@
 @import 'styles/variables.scss';
 
-:root {
-  --index:calc(1vw+1vh);
-}
-
 .card_info {
   display: flex;
   flex-direction: column;
-  width: calc(var(--index) * 36);
+  min-height: 13rem;
+  width: 80%;
   padding: 20px;
   border-radius: 10px;
   background-color: $color-bg-card;
@@ -15,7 +12,7 @@
   background-repeat: no-repeat;
   background-size: cover;
   gap: 2rem;
-  box-shadow: 4px 5px 9px 0 rgba(255, 249, 249, 0.2);
+  box-shadow: -10px 0 10px -10px  rgba(82, 122, 132, 0.7);;
   opacity: 0;
   animation: fadeIn $animation-time-welcome ease-in both;
   transition: scale $transitionHover;
@@ -27,8 +24,7 @@
   }
 
   @media (max-width: 600px) {
-    max-width: calc(100%);
-    width: calc(var(--index) * 45);
+    width: 100%;
     padding: 10px;
   }
 }
@@ -64,5 +60,11 @@
   to {
     opacity: 1;
     transform: translate3d(0, 0, 0);
+  }
+}
+
+.description {
+  @media (min-width: 600px) {
+    display: none;
   }
 }
