--- a/src/components/Layout/Layout.module.scss
+++ b/src/components/Layout/Layout.module.scss
@@ -1,11 +1,11 @@
 @import 'styles/variables.scss';
 
 .layout_wrap {
+  position: relative;
   display: flex;
   flex-direction: column;
   width: 100%;
-  height: 100%;
-  //background: $color-bg-main;
+  min-height: 100vh;
 }
 
 .main {
