--- a/src/pages/NotFoundPage/NotFoundPage.module.scss
+++ b/src/pages/NotFoundPage/NotFoundPage.module.scss
@@ -1,8 +1,14 @@
 .wrapper {
   width: 100%;
   height: 100%;
-  background-image: url(/404.png);
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: contain;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+}
+
+.img {
+  display: block;
+  width: 40%;
+  height: 40%;
 }
