--- a/src/pages/WelcomePage/WelcomePage.module.scss
+++ b/src/pages/WelcomePage/WelcomePage.module.scss
@@ -96,7 +96,8 @@
   }
 
   @media (max-width: 600px) {
-    gap: .5rem;
+    flex-direction: column;
+    gap: 4rem;
   }
 }
 
@@ -107,6 +108,10 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+
+  @media (max-width: 600px) {
+    width: 100%;
+  }
 }
 
 .gallery_left {
@@ -114,6 +119,7 @@
 
   & div:nth-child(1) {
     background-image: url(/dev-bg2.png);
+   
   }
 
   & div:nth-child(3) {
@@ -131,11 +137,12 @@
 
 .gallery_description {
   font-size: 1.1rem;
-  max-width: 60%;
+  width: 60%;
+  text-align: center;
 
   @media (max-width: 600px) {
     font-size: 1rem;
-    max-width: 90%;
+    display: none;
   }
 }
 
