--- a/src/pages/WelcomePage/WelcomePage.module.scss
+++ b/src/pages/WelcomePage/WelcomePage.module.scss
@@ -1,9 +1,5 @@
 @import 'styles/variables.scss';
 
-:root {
---index:calc(1vw+1vh);
-}
-
 .welcome_page {
   height: 100%;
   max-width: 100%;
@@ -34,8 +30,8 @@
 
   @media (max-width: 600px) {
     right: 1rem;
-    top: calc(var(--index) * 60);
-    width: calc(var(--index) * 90);
+    top: 10%;
+    width: 95%;
   }
 }
 
