--- a/src/components/forms/ResponseErrorMessage/ResponseErrorMessage.module.scss
+++ b/src/components/forms/ResponseErrorMessage/ResponseErrorMessage.module.scss
@@ -1,7 +1,6 @@
-$font-size-normal: 1.3rem;
+$font-size-normal: 1.2rem;
 
 .response_error {
-  height: 1.5rem;
   font-size: $font-size-normal;
   line-height: $font-size-normal;
   bottom: -$font-size-normal;
@@ -10,4 +9,6 @@ $font-size-normal: 1.3rem;
   font-weight: 400;
   cursor: default;
   border-radius: 2px;
+  width: 280px;
+  text-align: center;
 }
