--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -1,9 +1,6 @@
 @import 'styles/variables.scss';
 
 .footer {
-  flex: 0 0 auto;
-  width: 100%;
-  min-height: 4rem;
   background-color: rgb(233, 230, 230);
   border-top: solid .1px rgb(108, 108, 108);
 }
@@ -17,11 +14,14 @@
   max-width: $width-wrap-app-content;
   height: 100%;
   margin: 0 auto;
-  padding: 0 .5rem;
+  padding: .3rem;
   color: black;
+  min-height: 65px;
+
   @media (max-width: 600px) {
+    flex-direction: column;
     justify-content: center;
-    gap: 0rem;
+    gap: 5px 0;
   }
 }
 
@@ -51,6 +51,7 @@
   font-weight: 500;
   gap: 1rem;
   justify-content: center;
+
   @media (max-width: 600px) {
     gap: .5rem;
   }
