--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -7,10 +7,13 @@
   display: flex;
   flex: 0 0 auto;
   justify-content: center;
-  min-height: 85px;
+  min-height: 81px;
   padding: 0.4rem 0.2rem;
   top: 0;
   width: 100%;
+  z-index: 100;
+  transition: box-shadow 0.1s linear, background-color 0.1s linear;
+  user-select: none;
 
 
   @media (max-width: 600px) {
@@ -27,6 +30,7 @@
   margin: 0 auto;
   padding: 0 .5rem;
   width: $width-wrap-app-content;
+
   @media (max-width: 600px) {
     flex-direction: column;
     align-items: start;
@@ -41,13 +45,13 @@
   flex: 0 0 auto;
   justify-content: center;
   border-bottom: 0.3px transparent solid;
-  min-height: 85px;
+  min-height: 81px;
   padding: 0.4rem 0.2rem;
   position: sticky;
   top: 0;
   width: 100%;
   z-index: 100;
-  transition: box-shadow 0.1s linear;
+  transition: box-shadow 0.1s linear, background-color 0.1s linear;
 
   @media (max-width: 600px) {
     min-height: 135px;
