--- a/src/pages/WelcomePage/WelcomePage.module.scss
+++ b/src/pages/WelcomePage/WelcomePage.module.scss
@@ -2,23 +2,18 @@
 
 .welcome_page {
   background-color: $color-bg-main;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
   color: aliceblue;
   display: flex;
-  height: 100%;
-  max-width: 100%;
+  flex-direction: column;
+  align-items: center;
 
   &_wrap {
     display: flex;
     flex-direction: column;
     gap: 2rem;
-    justify-content: center;
-    margin: 0 auto;
-    overflow-x: hidden;
     padding: 1rem;
-    width: $width-wrap-app-content;
+    max-width: $width-wrap-app-content;
+    margin-bottom: 40px;
   }
 }
 
@@ -39,12 +34,10 @@
   align-items: center;
   display: flex;
   height: 100vh;
-  width: 100%;
   z-index: 1;
 }
 
 .title {
-  gap: 4rem;
   width: 60%;
 
   @media (max-width: 600px) {
@@ -56,7 +49,6 @@
   background: linear-gradient(to right, rgba(25, 25, 25, .9) 0%, rgba(25, 25, 25, .8) 60%, rgba(25, 25, 25, .01) 100%);
   font-size: 1.8rem;
   text-align: left;
-  width: 100%;
 
   @media (max-width: 600px) {
     font-size: 1.2rem;
@@ -67,7 +59,7 @@
   font-size: 5rem;
   margin: 0;
   text-align: left;
-  width: 100%;
+
   @media (max-width: 600px) {
     font-size: 3rem;
   }
@@ -77,7 +69,7 @@
   display: flex;
   gap: 2rem;
   justify-content: center;
-  padding-bottom: 4rem;
+  z-index: 1;
 
   & div:nth-child(1) {
     animation-delay: $animation-time-welcome;
