feat: change cursor on developer card info

--- a/src/components/Developer/Developer.module.scss
+++ b/src/components/Developer/Developer.module.scss
@@ -15,6 +15,7 @@
   transition: scale $transitionHover;
   width: 80%;
   will-change: transform;
+  cursor: default;
 
   &:hover {
     scale: 1.03;
