--- a/src/components/Tabs/Tabs.module.scss
+++ b/src/components/Tabs/Tabs.module.scss
@@ -29,9 +29,10 @@
   cursor: pointer;
 
   &_label {
-    padding: 3px 25px;
+    padding: 4px 25px;
     text-transform: uppercase;
     font-size: 14px;
+    color: #fff;
   }
 
   &_plus {
@@ -41,11 +42,11 @@
 
   & span {
     position: absolute;
-    width: 15px;
-    height: 15px;
+    width: 16px;
+    height: 16px;
     border-radius: 50%;
     right: 5px;
-    top: calc((100% - 14px) / 2);
+    top: calc((100% - 16px) / 2);
     transition: 0.4s;
 
     &::before,
@@ -53,7 +54,7 @@
       position: absolute;
       content: "";
       transform: rotate(45deg);
-      top: calc(50% - 1px);
+      top: 7px;
       left: 2px;
       width: 12px;
       height: 2px;
@@ -65,9 +66,9 @@
     }
 
     &:hover {
-      transform: scale(1.1);
       background-color: $color-light-gray;
     }
+
   }
 
   &:hover {
@@ -75,7 +76,7 @@
 
     & span::before,
     & span::after {
-      background-color: $color-iron-gray;
+      background-color: #fff;
     }
   }
 
@@ -86,7 +87,7 @@
 
     & span::before,
     & span::after {
-      background-color: $color-iron-gray;
+      background-color: #fff;
     }
   }
 }
@@ -95,7 +96,7 @@
   .tab {
 
       &_label {
-          padding: 3px 18px;
+          padding: 4px 18px;
       }
 
       & span {
