fix: fix appearance bug of btns in RU localization for 320px

--- a/src/pages/EditorPage/EditorPage.module.scss
+++ b/src/pages/EditorPage/EditorPage.module.scss
@@ -54,6 +54,8 @@
 
 @media (max-width: 700px) {
   .editor {
+    padding-left: 16px;
+    padding-right: 16px;
 
     &_inner {
       flex-wrap: wrap;
