--- a/src/components/Variables/Variables.module.scss
+++ b/src/components/Variables/Variables.module.scss
@@ -36,3 +36,27 @@
     height: 150px;
   }
 }
+
+@media (max-width: 700px) {
+
+  .variables {
+
+    &_btn {
+      right: 4px;
+      top: 16px;
+    }
+
+  }
+
+}
+
+@media (max-width: 450px) {
+
+  .variables {
+    
+      &>div:nth-child(2) {
+        margin-left: 2px;
+      }
+  }
+
+}
