--- a/src/components/Tabs/Tabs.module.scss
+++ b/src/components/Tabs/Tabs.module.scss
@@ -24,7 +24,7 @@
   border-top-left-radius: 5px;
   border-top-right-radius: 10px;
   white-space: nowrap;
-  transition: all 0.4s;
+  transition: color 0.2s linear, background-color 0.2s linear;
   background-color: $color-light-gray;
   cursor: pointer;
 
@@ -32,7 +32,6 @@
     padding: 4px 25px;
     text-transform: uppercase;
     font-size: 14px;
-    color: #fff;
   }
 
   &_plus {
@@ -73,6 +72,7 @@
 
   &:hover {
     background-color: $color-dusty-gray;
+    color: white;
 
     & span::before,
     & span::after {
@@ -84,6 +84,7 @@
     border: 1px solid $color-graphite-gray;
     border-bottom-color: transparent;
     background-color: $color-dusty-gray;
+    color: white;
 
     & span::before,
     & span::after {
