fix: hide scroll when variables window opening

--- a/src/components/Variables/Variables.module.scss
+++ b/src/components/Variables/Variables.module.scss
@@ -9,6 +9,7 @@
   background-color: #fff;
   border-bottom-right-radius: 5px;
   border-bottom-left-radius: 5px;
+  z-index: 11;
 
   &>div:nth-child(2) {
     margin-left: 5px;
