--- a/src/components/Developer/Developer.module.scss
+++ b/src/components/Developer/Developer.module.scss
@@ -16,6 +16,7 @@
   width: 80%;
   will-change: transform;
   cursor: default;
+  font-size: 1.5rem;
 
   &:hover {
     scale: 1.03;
@@ -50,7 +51,7 @@
 }
 
 .task {
-  font-size: 12px;
+  font-size: 1.1rem;
   font-weight: 700;
 }
 
@@ -58,6 +59,7 @@
   backdrop-filter: blur(5px);
   background-color: rgba(28, 28, 28, 0.68);
   padding: 10px;
+  font-size: 1rem;
   border-top: 1px solid #eeeeee;
   @media (min-width: 600px) {
     display: none;
